# learn-pandas

./: README.md  pyproject.toml
data/to_export/: dados_modificado.csv
learn_pandas/: index.py
